--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_DOMAIN=localhost
+APP_URL="https://${APP_DOMAIN}"
+ASSET_URL="https://${APP_DOMAIN}"
+
+CERTIFICATE_MODE=internal
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,3 +67,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+OCTANE_SERVER=swoole
