add docker registry service

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,16 +1,17 @@
 {$APP_DOMAIN}:443 {
-	log
+    log
 
-	encode gzip
-	root * /app/public
+    encode gzip
+    root * /app/public
 
-	reverse_proxy http://app:8000
-	file_server
+    reverse_proxy /v2* http://registry:5000
+    reverse_proxy http://app:8000
+    file_server
 
-	header {
-		-X-Powered-By
-		-Server
-	}
+    header {
+        -X-Powered-By
+        -Server
+    }
 
-	tls {$CERTIFICATE_MODE:internal}
+    tls {$CERTIFICATE_MODE:internal}
 }
