--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.10",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "lcobucci/jwt": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
+        "laravel/telescope": "^5.9",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
