--- a/.env.example
+++ b/.env.example
@@ -24,12 +24,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mariadb
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=registry
+DB_USERNAME=registry
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -68,3 +68,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 OCTANE_SERVER=swoole
+REGISTRY_HTTP_SECRET=
